name:                hyhac
version:             0.1.0.0
synopsis:            A HyperDex client library
description:         
  A client for accessing the HyperDex distributed database
license:             BSD3
license-file:        LICENSE
author:              Aaron Friel
maintainer:          mayreply@aaronfriel.com
copyright:           (c) 2013 Aaron Friel
category:            Database
build-type:          Simple

extra-source-files:  README.md
  include/hyperdex.h
  include/hyperclient.h

cabal-version:       >=1.10

library
  default-language:  Haskell2010

  build-tools:        c2hs

  hs-source-dirs:    src
  exposed-modules:
    Database.HyperDex
    Database.HyperDex.Internal
    Database.HyperDex.Internal.ReturnCode
    Database.HyperDex.Internal.Client
    Database.HyperDex.Internal.Space
    Database.HyperDex.Internal.Attribute
    Database.HyperDex.Internal.Util
    Database.HyperDex.Internal.Hyperdex
    Database.HyperDex.Internal.Hyperdata
    Database.HyperDex.Internal.Hyperclient

  -- Modules included in this library but not exported.
  -- other-modules:       
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  build-depends:
      base                       == 4.6.*
    , bytestring                 >= 0.10
    , cereal                     >= 0.3.5
    , containers                 >= 0.5

    -- Only included so cabal install --only-dependencies will bring in
    -- everything required and compatible with the test suite.
    , test-framework             >= 0.8
    , test-framework-hunit
    , test-framework-quickcheck2 >= 0.3
    , HUnit
    , QuickCheck

  ghc-options:       -Wall

  include-dirs:      include
  includes:          hyperdex.h

  extra-libraries:
    hyperclient

source-repository head
  type: git
  location: https://github.com/aaronfriel/hyhac

Test-suite tests
  default-language:  Haskell2010

  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           main.hs

  build-depends:
      base                       == 4.6.*
    , hyhac
    , bytestring                 >= 0.10
    , cereal                     >= 0.3.5
    , containers                 >= 0.5

    -- Test suite packages:
    , test-framework             >= 0.8
    , test-framework-hunit
    , test-framework-quickcheck2 >= 0.3
    , HUnit
    , QuickCheck

  ghc-options:       -Werror
