name:                hyhac
version:             0.15.0.0
synopsis:            A HyperDex client library
description:
  A client for accessing the HyperDex distributed database
license:             BSD3
license-file:        LICENSE
author:              Aaron Friel <mayreply@aaronfriel.com>, Niklas Hambüchen <mail@nh2.me>, Mark Wotton <mwotton@gmail.com>
maintainer:          mayreply@aaronfriel.com
copyright:           (c) 2013 Aaron Friel
category:            Database

build-type:          Simple

extra-source-files:  README.md
  include/hyperdex.h
  include/hyperdex/admin.h
  include/hyperdex/client.h

cabal-version:       >=1.10

Flag Tests
  Description: Enable test support and expose additional modules for test harness.
  Default:     False

library
  default-language:  Haskell2010

  build-tools:        c2hs

  hs-source-dirs:    src
  exposed-modules:
    Database.HyperDex
    Database.HyperDex.Admin
    Database.HyperDex.Client
    Database.HyperDex.Utf8
    Database.HyperDex.Exception

  other-modules:
    Database.HyperDex.Internal
    Database.HyperDex.Internal.Admin
    Database.HyperDex.Internal.Client
    Database.HyperDex.Internal.Attribute
    Database.HyperDex.Internal.AttributeCheck
    Database.HyperDex.Internal.MapAttribute
    Database.HyperDex.Internal.PerfCounter
    Database.HyperDex.Internal.Hyperdex
    Database.HyperDex.Internal.Hyperdata
    Database.HyperDex.Internal.HyperdexAdmin
    Database.HyperDex.Internal.HyperdexClient
    Database.HyperDex.Internal.Core

  if flag(tests)
    exposed-modules: Database.HyperDex.Internal.Util
    ghc-options: -Werror -Wall -fno-warn-orphans
  else
    other-modules:   Database.HyperDex.Internal.Util

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  build-depends:
      base                       >= 4.6
    , bytestring                 >= 0.10
    , cereal                     >= 0.3.5
    , containers                 >= 0.5
    , unordered-containers       >= 0.2
    , hashable
    , mtl                        >= 2.1
    , transformers               >= 0.2
    , transformers-base
    , stm
    , text
    , resourcet                  >= 0.4.0
    , data-default

    -- Only included so cabal install --only-dependencies will bring in
    -- everything required and compatible with the test suite.
    , test-framework             >= 0.8
    , test-framework-hunit
    , test-framework-quickcheck2 >= 0.3
    , HUnit
    , QuickCheck

  if !os(windows)
    cpp-options:   -D__UNIX__
    build-depends: unix

  ghc-options:       -O2 -Wall

  include-dirs:      include
  includes:          hyperdex.h

  extra-libraries:
    hyperdex-admin, hyperdex-client

Executable benchmark
  default-language:  Haskell2010

  Main-is:             hyhac.hs
  hs-source-dirs:      benchmark
  Build-depends:       base
                     , hyhac
                     , deepseq
                     , criterion
                     , bytestring
                     , text
                     , process
                     , resource-pool
                     , direct-sqlite
  ghc-options:         -Wall -O2 -threaded

source-repository head
  type: git
  location: https://github.com/aaronfriel/hyhac

Test-suite tests
  default-language:  Haskell2010

  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           main.hs

  build-depends:
      base                       >= 4.6
    , hyhac
    , bytestring                 >= 0.10
    , cereal                     >= 0.3.5
    , containers                 >= 0.5
    , unordered-containers       >= 0.2
    , mtl                        >= 2.1
    , transformers               >= 0.2
    , random                     >= 1.0
    , text
    , resource-pool              >= 0.2.0
    , data-default

    -- Test suite packages:
    , test-framework             >= 0.8
    , test-framework-hunit
    , test-framework-quickcheck2 >= 0.3
    , HUnit
    , QuickCheck

  ghc-options:       -W -O2 -threaded -rtsopts
